k8s/mainfests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-service
  namespace: go-app

spec:
  selector:
    app: go-web-app

  ports:
    - port: 8085
      targetPort: 8085
      protocol: TCP

  type: ClusterIP
